crates/mir/tests/fixtures/errors/move_conflict_borrow.snap
---
source: crates/mir/tests/lowering_errors.rs
assertion_line: 27
expression: err.to_string()
input_file: tests/fixtures/errors/move_conflict_borrow.fe
---
error[10-0002]: move conflict in `fn move_conflict_borrow`
  ┌─ move_conflict_borrow.fe:4:5
  │
3 │     let p: mut u256 = mut x
  │                           - `x` is borrowed here
4 │     let y: u256 = move x
  │     ^^^^^^^^^^^^^^^^^^^^ cannot move out of a value while it is borrowed
